theme/aplus/static/default.css
/* This Sphinx theme is designed for content that is embedded in the A+
learning management system and thus the theme defines CSS rules for only some
special components. Generic and body-level rules come from the A+ system. */

/* -- admonitions ----------------------------------------------------------- */

.admonition {
  min-height: 42px;
  padding: 1.5rem;
  margin-bottom: 2rem;
  border: 1px solid transparent;
  border-radius: 4px;
  margin-left: 0;
  margin-right: 0;
  margin-top: 1.5rem;
  /* default colors */
  color: var(--bs-secondary-text, #606060);
  background-color: var(--bs-secondary-bg, #e8e8e8);
  border-color: var(--bs-border-color, #d7d7d7);
}

.admonition button {
  margin-bottom: 0.5rem;
}

.admonition-title {
  font-weight: 700;
  margin: 0px 0px 0.5rem;
}

.admonition .last {
  margin-bottom: 0;
}

.admonition dt {
  font-weight: bold;
}

.admonition dl {
  margin-bottom: 0;
}

/* Specialized admonitions use different colours */
.admonition.success,
.admonition.meta,
.admonition.tip,
.admonition.hint {
  color: var(--bs-success-text-emphasis, #3c763d);
  background-color: var(--bs-success-bg-subtle, #dff0d8);
  border-color: var(--bs-success-border-subtle, #d6e9c6);
}

.admonition.info,
.admonition.note,
.admonition.seealso {
  color: var(--bs-info-text-emphasis, #31708f);
  background-color: var(--bs-info-bg-subtle, #d9edf7);
  border-color: var(--bs-info-border-subtle, #bce8f1);
}

.admonition.warning,
.admonition.caution,
.admonition.attention,
.admonition.admonition-todo {
  color: var(--bs-warning-text-emphasis, #8a6d3b);
  background-color: var(--bs-warning-bg-subtle, #fcf8e3);
  border-color: var(--bs-warning-border-subtle, #faebcc);
}

.admonition.danger,
.admonition.error {
  color: var(--bs-danger-text-emphasis, #a94442);
  background-color: var(--bs-danger-bg-subtle, #f2dede);
  border-color: var(--bs-danger-border-subtle, #ebccd1);
}

.admonition.aside {
  color: #606060;
  background-color: #e8e8e8;
  border-color: #d7d7d7;
}

/** Add large part of basic css **/

/* -- general body styles --------------------------------------------------- */

div.body p,
div.body dd,
div.body li,
div.body blockquote {
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

a.headerlink {
  visibility: hidden;
}

h1:hover > a.headerlink,
h2:hover > a.headerlink,
h3:hover > a.headerlink,
h4:hover > a.headerlink,
h5:hover > a.headerlink,
h6:hover > a.headerlink,
dt:hover > a.headerlink,
caption:hover > a.headerlink,
p.caption:hover > a.headerlink,
div.code-block-caption:hover > a.headerlink {
  visibility: visible;
}

div.body p.caption {
  text-align: inherit;
}

div.body td {
  text-align: left;
}

.first {
  margin-top: 0 !important;
}

p.rubric {
  margin-top: 30px;
  font-weight: bold;
}

li > p:last-child,
dd > p:last-child {
  margin-bottom: 0.5em;
}

img.align-left,
.figure.align-left,
object.align-left {
  clear: left;
  float: left;
  margin-right: 1em;
}

img.align-right,
.figure.align-right,
object.align-right {
  clear: right;
  float: right;
  margin-left: 1em;
}

img.align-center,
.figure.align-center,
object.align-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

/* -- sidebars -------------------------------------------------------------- */

div.sidebar {
  margin: 0 0 0.5em 1em;
  border: 1px solid var(--bs-border-color, #ddb);
  padding: 7px 7px 0 7px;
  background-color: var(--bs-secondary-bg, #ffe);
  width: 40%;
  float: right;
}

p.sidebar-title {
  font-weight: bold;
}

/* -- topics ---------------------------------------------------------------- */

div.topic {
  border: 1px solid var(--bs-primary-border-subtle, #ccc);
  padding: 7px 7px 0 7px;
  margin: 10px 0 10px 0;
  background-color: var(--bs-primary-bg-subtle, #ddf1fb);
}

.admonition, .topic {
  min-height: 42px;
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
  margin-left: 0em;
  margin-right: 0em;
  margin-top: 15px;
  background-color: var(--bs-secondary-bg, #d9edf7);
  border-color: var(--bs-border-color, #bce8f1);
  color: var(--bs-body-color, #31708f);
}

p.topic-title {
  font-size: 1.1em;
  font-weight: bold;
  margin-top: 10px;
}

.topic.dl-horizontal dd {
  margin-bottom: 0px;
}

.topic.dl-horizontal .topic-title {
  display: none;
}

.topic.dl-horizontal dt {
  width: 250px;
  margin-top: 0.5em;
}

.topic.dl-horizontal dd {
  margin-left: 270px;
  margin-top: 0.5em;
}

.topic.dl-horizontal dt:first-of-type,
.topic.dl-horizontal dd:first-of-type {
  margin-top: 0;
}

.topic.dl-horizontal dd > p:last-child {
  margin-bottom: 0;
}

/* -- admonitions ----------------------------------------------------------- */

div.body p.centered {
  text-align: center;
  margin-top: 25px;
}

/* -- tables ---------------------------------------------------------------- */

table.docutils {
  border: 0;
  border-collapse: collapse;
}

table caption span.caption-number {
  font-style: italic;
}

table caption span.caption-text {
}

table.docutils td,
table.docutils th {
  padding: 1px 8px 1px 5px;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-bottom: 1px solid #aaa;
}

table.footnote td,
table.footnote th {
  border: 0 !important;
}

th {
  text-align: left;
  padding-right: 5px;
}

table.citation {
  border-left: solid 1px gray;
  margin-left: 1px;
}

table.citation td {
  border-bottom: none;
}

table.citation .label {
  /* Bootstrap makes labels unreadable in Sphinx bibliographies (lists of references)
      by using white font on white background. */
  color: #333333;
}

/* -- figures --------------------------------------------------------------- */

div.figure {
  margin: 0.5em;
  padding: 0.5em;
}

div.figure p.caption {
  padding: 0.3em;
}

div.figure p.caption span.caption-number {
  font-style: italic;
}

div.figure p.caption span.caption-text {
}

/* -- field list styles ----------------------------------------------------- */

table.field-list td,
table.field-list th {
  border: 0 !important;
}

.field-list ul {
  margin: 0;
  padding-left: 1em;
}

.field-list p {
  margin: 0;
}

.field-name {
  -moz-hyphens: manual;
  -ms-hyphens: manual;
  -webkit-hyphens: manual;
  hyphens: manual;
}

/* -- other body styles ----------------------------------------------------- */

ol.arabic {
  list-style: decimal;
}

ol.loweralpha {
  list-style: lower-alpha;
}

ol.upperalpha {
  list-style: upper-alpha;
}

ol.lowerroman {
  list-style: lower-roman;
}

ol.upperroman {
  list-style: upper-roman;
}

dl {
  margin-bottom: 15px;
}

dd p {
  margin-top: 0px;
}

dd ul,
dd table {
  margin-bottom: 10px;
}

dd {
  margin-top: 3px;
  margin-bottom: 10px;
  margin-left: 30px;
}

dt:target,
.highlighted {
  background-color: #fbe54e;
}

dl.glossary dt {
  font-weight: bold;
  font-size: 1.1em;
}

.optional {
  font-size: 1.3em;
}

.sig-paren {
  font-size: larger;
}

.versionmodified {
  font-style: italic;
}

.system-message {
  background-color: #fda;
  padding: 5px;
  border: 3px solid red;
}

.footnote:target {
  background-color: #ffa;
}

.line-block {
  display: block;
  margin-top: 1em;
  margin-bottom: 1em;
}

.line-block .line-block {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 1.5em;
}

.guilabel,
.menuselection {
  font-family: sans-serif;
}

.accelerator {
  text-decoration: underline;
}

.classifier {
  font-style: oblique;
}

/* Add semicolon between classifiers as Sphinx does not seem to */
.classifier:before {
  content: " : ";
}

abbr,
acronym {
  border-bottom: dotted 1px;
  cursor: help;
}

/* -- code displays --------------------------------------------------------- */

pre {
  color: inherit;
  background-color: inherit;
  overflow: auto;
  overflow-y: hidden; /* fixes display issues on Chrome browsers */
}

span.pre {
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  hyphens: none;
}

td.linenos pre {
  padding: 5px 0px;
  border: 0;
  background-color: transparent;
  color: var(--bs-gray-500,#aaa);
}

table.highlighttable {
  width: 100%;
  margin: 0px;
  table-layout: fixed;
}

table.highlighttable td.linenos {
  padding: 0px;
  width: 1.6em;
}

.linenodiv {
  margin: -0.4em;
}

div.code-block-caption {
  padding: 2px 5px;
  font-size: small;
}

div.code-block-caption code {
  background-color: transparent;
}

div.code-block-caption + div > div.highlight > pre {
  margin-top: 0;
}

div.code-block-caption span.caption-number {
  padding: 0.1em 0.3em;
  font-style: italic;
}

div.code-block-caption span.caption-text {
  font-size: 1.1em;
}

div.literal-block-wrapper {
  padding: 1em 1em 0;
  display: contents;
}

div.literal-block-wrapper div.highlight {
  margin: 0;
}

code.descname {
  background-color: transparent;
  font-weight: bold;
  font-size: 1.2em;
}

code.descclassname {
  background-color: transparent;
}

code.xref,
a code {
  background-color: transparent;
  font-weight: bold;
}

/* Change the appearance of the download role */
a.download > code > span.pre {
  color: #2491EE;
  font-weight: 500;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
  font-size: 14px;
}

h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code {
  background-color: transparent;
}

.viewcode-link {
  float: right;
}

.viewcode-back {
  float: right;
  font-family: sans-serif;
}

div.viewcode-block:target {
  margin: -1px -10px;
  padding: 0 10px;
}

/* -- math display ---------------------------------------------------------- */

img.math {
  vertical-align: middle;
}

div.body div.math p {
  text-align: center;
}

span.eqno {
  float: right;
}

span.eqno a.headerlink {
  position: relative;
  left: 0px;
  z-index: 1;
}

div.math:hover a.headerlink {
  visibility: visible;
}

/* -- printout stylesheet --------------------------------------------------- */

@media print {
  div.document,
  div.documentwrapper,
  div.bodywrapper {
    margin: 0 !important;
    width: 100%;
  }

  div.sphinxsidebar,
  div.related,
  div.footer,
  #top-link {
    display: none;
  }
}

/* -- point of interest --------------------------------------------------- */

.poi {
  margin: 20px 0;
  padding: 0;
  width: inherit;
}

.no-poi-box {
  margin: 0;
  padding: 0;
  width: inherit;
}

.poi-container {
  width: 100%;
  padding: 0;
  margin: 5px 0;
}

.poi-content {
  border: 1px solid #ccc;
  padding: 15px 20px;
  border-radius: 4px;
}

.poi-title {
  width: 80%;
  float: left;
  height: 20px;
  font-weight: bold;
  font-size: 1.2em;
  padding-left: 0;
}

.poi-links {
  width: 20%;
  text-align: right;
  float: left;
  margin: 5px 0 0 0;
  height: 20px;
}

.poi-icon {
  margin: 0 10px;
  vertical-align: baseline;
  height: 20px;
}

.borderless .poi-content {
  border: 0;
}

.poi-container.poi-content {
  border: 1px solid #e7f2fa;
  border-top: 2px solid #3c763d;
  border-bottom: 2px solid #3c763d;
  background: #ebf5e7;
}

